<resources>
    <string name="app_name">Walmart</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="create_account">Create a new account</string>
    <string name="password">Password (required)</string>
    <string name="email">Email address (required)</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
</resources>