<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:id="@+id/imgLogo"
        android:src="@drawable/walmart"/>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/sign_in_to_your_account"
        android:textSize="26sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtWelcome"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background"
        >

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="15dp"
            android:text="@string/email"
            android:textSize="14sp" />

        <!-- Email EditText -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edtborder"
            />

        <!-- Password Label -->
        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailEditText"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textSize="14sp" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edtborder"

            android:inputType="textPassword" />

        <!-- Forgot Password Label -->
        <TextView
            android:id="@+id/forgotPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordEditText"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:autoLink="all"
            android:clickable="true"
            android:text="Forgot Password?"
            android:textSize="16sp" />

        <!-- Sign-In Button -->
        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPasswordLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"
            android:background="#0070FF"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

        <!-- "Don't have an account?" Label -->
        <TextView
            android:id="@+id/dontHaveAccountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/createAccountButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/don_t_have_an_account"
            android:textSize="16sp" />

        <!-- Create Account Button -->
        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:shadowRadius="5"
            android:textAllCaps="false"
            android:background="#FFF"
            android:text="@string/create_account"
            android:textColor="#0070FF" />
    </RelativeLayout>

</RelativeLayout>